--- a/index.html
+++ b/index.html
@@ -39,76 +39,26 @@
                         <div>
                             <script type="text/javascript">
                                 atOptions = {
-                                    'key': 'a298c3a9731326ddbdf4ea5d45126769',
-                                    'format': 'iframe',
-                                    'height': 250,
-                                    'width': 300,
-                                    'params': {}
-                                };
-                            </script>
-                            <script type="text/javascript" src="//www.profitablecreativeformat.com/a298c3a9731326ddbdf4ea5d45126769/invoke.js"></script>
-                        </div>
-                        <div>
-                            <script type="text/javascript">
-                                atOptions = {
-                                    'key': '31d89d8ced0a8f422f78f87dd91da407',
-                                    'format': 'iframe',
-                                    'height': 90,
-                                    'width': 728,
-                                    'params': {}
-                                };
-                            </script>
-                            <script type="text/javascript" src="//www.profitablecreativeformat.com/31d89d8ced0a8f422f78f87dd91da407/invoke.js"></script>
-                        </div>
-                        <div>
-                            <script type="text/javascript">
-                                atOptions = {
-                                    'key': 'fcf354ed5b6308e04393a6bd29083af5',
-                                    'format': 'iframe',
-                                    'height': 600,
-                                    'width': 160,
-                                    'params': {}
-                                };
-                            </script>
-                            <script type="text/javascript" src="//www.profitablecreativeformat.com/fcf354ed5b6308e04393a6bd29083af5/invoke.js"></script>
-                        </div>
-                        <div>
-                            <script type="text/javascript">
-                                atOptions = {
-                                    'key': '31a4fbfb6ad8b0965536419ac3addc32',
-                                    'format': 'iframe',
-                                    'height': 300,
-                                    'width': 160,
-                                    'params': {}
-                                };
-                            </script>
-                            <script type="text/javascript" src="//www.profitablecreativeformat.com/31a4fbfb6ad8b0965536419ac3addc32/invoke.js"></script>
-                        </div>
-                        <div>
-                            <script type="text/javascript">
-                                atOptions = {
-                                    'key': 'a53867ec8736b4bcb1f4f17a7da9c6c1',
+                                    'key': '9359655977a54d217dd0cedea1f465b8',
                                     'format': 'iframe',
                                     'height': 60,
                                     'width': 468,
                                     'params': {}
                                 };
                             </script>
-                            <script type="text/javascript" src="//www.profitablecreativeformat.com/a53867ec8736b4bcb1f4f17a7da9c6c1/invoke.js"></script>
+                            <script type="text/javascript" src="//www.profitablecreativeformat.com/9359655977a54d217dd0cedea1f465b8/invoke.js"></script>
                         </div>
-                        <script type='text/javascript'
-                            src='//pl20925334.highcpmrevenuegate.com/bb/0c/d9/bb0cd9206df38b4c4daaf2621bbee94b.js'></script>
                         <div>
                             <script type="text/javascript">
                                 atOptions = {
-                                    'key': '1c97e3618d12651aa9440e434253ce25',
+                                    'key': '9359655977a54d217dd0cedea1f465b8',
                                     'format': 'iframe',
-                                    'height': 50,
-                                    'width': 320,
+                                    'height': 60,
+                                    'width': 468,
                                     'params': {}
                                 };
+                                document.write('<scr' + 'ipt type="text/javascript" src="//www.profitablecreativeformat.com/9359655977a54d217dd0cedea1f465b8/invoke.js"></scr' + 'ipt>');
                             </script>
-                            <script type="text/javascript" src="//www.profitablecreativeformat.com/1c97e3618d12651aa9440e434253ce25/invoke.js"></script>
                         </div>
                     </div>
                 </td>
@@ -121,7 +71,7 @@
 
         <footer id="myFooter">
             <div class="container">
-                <div class="contato">
+                <div class "contato">
                     <h3>Contato</h3>
                     <p>gabriel.santos15053@gmail.com</p>
                 </div>
