--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
 <body>
     <div class="topnav">
         <a class="active" href="/index.html">Home</a>
+        <a href="/ads.html">ADS</a>
     </div>
 
     <div style="font-family: courier;">
@@ -36,19 +37,8 @@
             <tr>
                 <td colspan="2" align="left" class="fadeIn">
                     <div class="ad-section">
-                        <div>
-                            <script type="text/javascript">
-                                atOptions = {
-                                    'key': '9359655977a54d217dd0cedea1f465b8',
-                                    'format': 'iframe',
-                                    'height': 60,
-                                    'width': 468,
-                                    'params': {}
-                                };
-                            </script>
-                            <script type="text/javascript" src="//www.profitablecreativeformat.com/9359655977a54d217dd0cedea1f465b8/invoke.js"></script>
-                        </div>
-                        <div>
+                        <!-- Novos Anúncios -->
+                        <div class="ad">
                             <script type="text/javascript">
                                 atOptions = {
                                     'key': '9359655977a54d217dd0cedea1f465b8',
@@ -60,6 +50,7 @@
                                 document.write('<scr' + 'ipt type="text/javascript" src="//www.profitablecreativeformat.com/9359655977a54d217dd0cedea1f465b8/invoke.js"></scr' + 'ipt>');
                             </script>
                         </div>
+                        <!-- Fim dos Novos Anúncios -->
                     </div>
                 </td>
             </tr>
