--- a/index.html
+++ b/index.html
@@ -41,14 +41,74 @@
                         <div class="ad">
                             <script type="text/javascript">
                                 atOptions = {
+                                    'key': '87d4a81ce2589ca1d008c84ed3f3606b',
+                                    'format': 'iframe',
+                                    'height': 250,
+                                    'width': 300,
+                                    'params': {}
+                                };
+                            </script>
+                            <script type="text/javascript" src="//www.profitablecreativeformat.com/87d4a81ce2589ca1d008c84ed3f3606b/invoke.js"></script>
+                        </div>
+                        <div class="ad">
+                            <script type="text/javascript">
+                                atOptions = {
+                                    'key': 'be8fdc0bf936314b98b75a897269c9f5',
+                                    'format': 'iframe',
+                                    'height': 90,
+                                    'width': 728,
+                                    'params': {}
+                                };
+                            </script>
+                            <script type="text/javascript" src="//www.profitablecreativeformat.com/be8fdc0bf936314b98b75a897269c9f5/invoke.js"></script>
+                        </div>
+                        <div class="ad">
+                            <script type="text/javascript">
+                                atOptions = {
+                                    'key': '3243d166fab4c7d0b54a9ee4642d5ff7',
+                                    'format': 'iframe',
+                                    'height': 600,
+                                    'width': 160,
+                                    'params': {}
+                                };
+                            </script>
+                            <script type="text/javascript" src="//www.profitablecreativeformat.com/3243d166fab4c7d0b54a9ee4642d5ff7/invoke.js"></script>
+                        </div>
+                        <div class="ad">
+                            <script type="text/javascript">
+                                atOptions = {
+                                    'key': 'db5f71a22b93a504e721d6f8cbbcb5da',
+                                    'format': 'iframe',
+                                    'height': 300,
+                                    'width': 160,
+                                    'params': {}
+                                };
+                            </script>
+                            <script type="text/javascript" src="//www.profitablecreativeformat.com/db5f71a22b93a504e721d6f8cbbcb5da/invoke.js"></script>
+                        </div>
+                        <div class="ad">
+                            <script type="text/javascript">
+                                atOptions = {
                                     'key': '9359655977a54d217dd0cedea1f465b8',
                                     'format': 'iframe',
                                     'height': 60,
                                     'width': 468,
                                     'params': {}
                                 };
-                                document.write('<scr' + 'ipt type="text/javascript" src="//www.profitablecreativeformat.com/9359655977a54d217dd0cedea1f465b8/invoke.js"></scr' + 'ipt>');
                             </script>
+                            <script type="text/javascript" src="//www.profitablecreativeformat.com/9359655977a54d217dd0cedea1f465b8/invoke.js"></script>
+                        </div>
+                        <div class="ad">
+                            <script type="text/javascript">
+                                atOptions = {
+                                    'key': 'bf6b77430426a4783612315f2acc913b',
+                                    'format': 'iframe',
+                                    'height': 50,
+                                    'width': 320,
+                                    'params': {}
+                                };
+                            </script>
+                            <script type="text/javascript" src="//www.profitablecreativeformat.com/bf6b77430426a4783612315f2acc913b/invoke.js"></script>
                         </div>
                         <!-- Fim dos Novos Anúncios -->
                     </div>
@@ -62,7 +122,7 @@
 
         <footer id="myFooter">
             <div class="container">
-                <div class "contato">
+                <div class="contato">
                     <h3>Contato</h3>
                     <p>gabriel.santos15053@gmail.com</p>
                 </div>
